@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-26T08:17:06Z",
+  "timestamp" : "2022-11-26T16:18:05Z",
   "count_outdated" : 670,
   "uniques_outdated" : 380,
-  "count" : 711,
+  "count" : 712,
   "uniques" : 401,
   "clones" : [
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-11-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
