@@ -1,5 +1,5 @@
 {
-  "count": 41,
+  "count": 42,
   "uniques": 8,
   "clones": [
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-11-26T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
