@@ -1,3 +1,11 @@
+2022-11-26T16:18:05Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3554462948 # 1064
+* notice: last 14d: unq all: 8 42
+* notice: prev accum: outdated-unq outdated-all / unq all: 380 670 / 401 711
+* notice: next accum: outdated-unq outdated-all / unq all: 380 670 / 401 712
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-11-26]
+
 2022-11-26T08:17:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3552905875 # 1063
 * notice: last 14d: unq all: 8 41
